[package]
name = "lookbook"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    ".",
    "macros"
]

[dependencies]
dioxus = "0.5.1"
dioxus-router = "0.5.0"
dioxus-material = "0.2.0"
dioxus-use-mounted = "0.2.1"
dioxus-resize-observer = "0.2.1"
dioxus_markdown = { git = "https://github.com/DioxusLabs/markdown" }
lookbook-macros = { path = "macros" }
serde_json = "1.0.107"
serde = "1.0.189"
