[package]
name = "lookbook"
version = "0.2.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    ".",
    "macros"
]

[dependencies]
dioxus = "0.6.0-alpha.2"
dioxus-router = "0.6.0-alpha.2"
dioxus-material = "0.3.0-alpha.2"
dioxus-use-mounted = "0.3.0-alpha.3"
dioxus-resize-observer = "0.3.0-alpha.3"
dioxus_markdown = { git = "https://github.com/matthunz/markdown", branch = "v0.6" }
lookbook-macros = { path = "macros" }
serde_json = "1.0.107"
serde = "1.0.189"

[dev-dependencies]
dioxus = { version = "0.6.0-alpha.2", features = ["web"] }
