[package]
name = "lookbook"
version = "0.2.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Component preview framework for Dioxus"

[workspace]
members = [
    ".",
    "macros"
]

[dependencies]
dioxus = "0.6.0-alpha.2"
dioxus-router = "0.6.0-alpha.2"
dioxus-material = "0.3.0-alpha.2"
dioxus-use-mounted = "0.3.0-alpha.3"
dioxus-resize-observer = "0.3.0-alpha.3"
lookbook-macros = "0.2.0-alpha.1"
pulldown-cmark = "0.12.1"
serde_json = "1.0.107"
serde = "1.0.189"

[dev-dependencies]
dioxus = { version = "0.6.0-alpha.2", features = ["web"] }
