[package]
name = "lookbook-macros"
version = "0.2.0-alpha.1"
edition = "2021"
description = "Macros for the Lookbook crate"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full"] }
dioxus-rsx = "0.5.6"
proc-macro2 = "1.0.69"
prettyplease = "0.2.15"
